--- a/css/styles.css
+++ b/css/styles.css
@@ -11352,7 +11352,7 @@ p {
 }
 #mainNav .navbar-brand {
   color: #ffc800;
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: 'NanumSquare', "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
   letter-spacing: 0.0625em;
   text-transform: uppercase;
@@ -11361,10 +11361,11 @@ p {
   height: 1.5rem;
 }
 #mainNav .navbar-nav .nav-item .nav-link {
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: 'NanumSquare', "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 0.95rem;
   color: #1a1d4c;
   letter-spacing: 0.0625em;
+  font-weight: 800;
 }
 #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
   color: #ffc800;
@@ -11406,15 +11407,16 @@ p {
   }
 }
 header.masthead {
-  padding-top: 10.5rem;
+  padding-top: 12rem;
   padding-bottom: 6rem;
   text-align: center;
   color: #fff;
-  background-image: url("../assets/img/header-bg.jpg");
+  background-image: url("../assets/img/header-bg.png");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
   background-size: cover;
+  position:relative;
 }
 header.masthead .masthead-subheading {
   font-size: 1.5rem;
@@ -11433,9 +11435,9 @@ header.masthead .masthead-heading {
 
 @media (min-width: 768px) {
   header.masthead {
-    padding-top: 17rem;
-    padding-bottom: 12.5rem;
+    padding-top: 9rem;
   }
+
   header.masthead .masthead-subheading {
     font-size: 2.25rem;
     font-style: italic;
@@ -11796,4 +11798,128 @@ section#contact form#contactForm :-ms-input-placeholder {
   margin: 5px 2px;
   border-radius: 10%;
   cursor: pointer;
+}
+
+.header-deco {
+  position: absolute;
+  top: 0;
+  left:50%;
+  transform: translate(-50%, 0);
+  max-width: 100%;
+}
+
+.header-tickers {
+  margin:0 auto;
+  background-image: url("../assets/img/header-tickers.png");
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  background-size: contain;
+  min-height: 717px;
+}
+
+@media (max-width: 992px) {
+  .header-tickers {
+    margin:0 auto;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-position: center center;
+    background-size: contain;
+    min-height: 400px;
+  }
+}
+@media (max-width: 768px) {
+  .header-tickers {
+    background-image: url("../assets/img/header-tickers-small.png");
+    min-height: 400px;
+  }
+  header.masthead {
+    padding-top: 6rem;
+  }
+}
+
+@media (max-width: 600px) {
+  .header-tickers {
+    min-height: 350px;
+  }
+}
+
+@media (max-width: 500px) {
+  .header-tickers {
+    min-height: 300px;
+  }
+}
+
+.header-buttons {
+  margin-top:41px;
+}
+
+.external-link-button {
+  width:20.625rem;
+  height:5.625rem;
+  margin-left:0.75rem;
+  margin-right:0.75rem;
+  margin-bottom:1.25rem;
+  border-radius: 2.8125rem;
+  border: solid 1px #ffffff;
+  background-color: transparent;
+  cursor: pointer;
+
+  font-family: 'NanumSquare';
+  font-weight: 800;
+  font-size: 1.875rem;
+  text-align: center; 
+  color: #ffffff;
+}
+
+.white-filled-button {
+  background-color: #ffffff;
+  color: #161a37;
+}
+
+.header-covid {
+  margin-top:2.5rem;
+  margin-bottom:2.75rem;
+
+  font-family: 'NanumSquare';
+  font-weight: 700;
+  font-size: 1.25rem;
+  text-align: center; 
+  color: #ffffff; 
+  line-height: 1.5;
+}
+
+.header-covid p {
+  margin-bottom: 0;
+}
+
+.header-youtube {
+
+}
+
+.header-youtube > .youtube-title {
+  font-family: 'NanumSquare';
+  font-weight: 800;
+  font-size: 1.875rem;
+  line-height: 1.875rem;
+  text-align: center; 
+  color: #ffffff;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  margin-bottom: 1.4rem;
+}
+
+.youtube-title > i {
+  height:1.875rem;
+}
+
+
+
+@media (max-width: 768px) {
+  html {
+    font-size:12px;
+  }
 }
