--- a/css/styles.css
+++ b/css/styles.css
@@ -677,7 +677,7 @@ progress {
 }
 .row > * {
   flex-shrink: 0;
-  width: 100%;
+  /* width: 100%; */
   max-width: 100%;
   padding-right: calc(var(--bs-gutter-x) * 0.5);
   padding-left: calc(var(--bs-gutter-x) * 0.5);
@@ -7838,7 +7838,7 @@ textarea.form-control-lg {
 
 .bg-light {
   --bs-bg-opacity: 1;
-  background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity)) !important;
+  background-color: #edeff4 !important;
 }
 
 .bg-dark {
@@ -12005,6 +12005,204 @@ section#contact form#contactForm :-ms-input-placeholder {
   color: #1a1d4c;  
 }
 
+.section-sub-title {
+  font-family: 'NanumSquare';
+  font-weight: 800;
+  font-size: 1.875rem;
+  text-align: center;
+  color: #24377c;
+}
+
+.horizontal-line {
+  margin-top:3.11rem;
+  margin-bottom:3.12rem;
+  background-color: #054ea0;
+  width:100%;
+  height:1px;
+}
+
+.profile-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 7.56rem;
+}
+
+.profile {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+
+  font-family: 'NanumSquare';
+  font-weight: 800;
+  font-size: 1.875rem;
+  text-align: center;
+  color: #161a37;
+
+  margin-left:1.68rem;
+  margin-right:1.68rem;
+
+  max-width:15.75rem;
+}
+
+.discussion-profile {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+
+  font-family: 'NanumSquare';
+  font-weight: 800;
+  font-size: 1.875rem;
+  text-align: center;
+  color: #161a37;
+
+  margin-left:1.68rem;
+  margin-right:1.68rem;
+
+  max-width:15.75rem;
+}
+
+.profile .profile-img {
+  width: 15.75rem;
+  height: 15.75rem;
+  margin-bottom: 2.37rem;
+}
+
+.profile h2 {
+  font-size:3.125rem;
+}
+
+.profile h3 {
+  margin-bottom:0;
+  font-size: 1.875rem;
+}
+
+.profile p {
+  font-weight: 700;
+  font-size: 1.875rem;
+}
+
+.discussion-profile .profile-img {
+  width: 15.75rem;
+  height: 15.75rem;
+  margin-bottom: 2.37rem;
+  margin-top:3.25rem;
+}
+
+.discussion-profile h2 {
+  font-size:3.125rem;
+}
+
+.discussion-profile h3 {
+  margin-bottom:0;
+  font-size: 1.875rem;
+}
+
+.discussion-profile p {
+  font-weight: 700;
+  line-height: 1.2;
+  font-size: 1.875rem;
+}
+/*
+@media (max-width: 992px) {
+  .profile h2 {
+    font-size:2.08rem;
+  }
+
+  .profile .profile-img {
+    width: 10rem;
+    height: 10rem;
+    margin: 0 auto;
+    margin-bottom: 1.37rem;
+  } 
+}
+*/
+
+@media (max-width: 460px) {
+  .profile {
+    display:flex;
+    flex-direction: row;
+
+    font-size: 1.25rem;
+
+    margin-left:0;
+    margin-right:0;
+ 
+    margin:0 auto;
+    
+    max-width:100%;
+    width:20rem;
+  }
+
+  .profile-text {
+    text-align: left;
+    margin-left: 3rem;
+  }
+
+  .profile .profile-img {
+    width: 8rem;
+    height: 8rem;
+    margin-bottom: 2.37rem;
+  }
+
+  .profile h2 {
+    font-size:1.6rem;
+  }
+  
+  .profile h3 {
+    margin-bottom:0;
+    font-size: 1rem;
+  }
+  
+  .profile p {
+    font-weight: 700;
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 460px) {
+  .discussion-profile {
+    display:flex;
+    flex-direction: row;
+
+    font-size: 1.25rem;
+
+    margin-left:0;
+    margin-right:0;
+ 
+    margin:0 auto;
+    
+    max-width:100%;
+    width:20rem;
+  }
+
+  .profile-text {
+    text-align: left;
+    margin-left: 3rem;
+  }
+
+  .discussion-profile .profile-img {
+    width: 8rem;
+    height: 8rem;
+    margin-bottom: 1.2rem;
+    margin-top: 1.2rem;
+  }
+
+  .discussion-profile h2 {
+    font-size:1.6rem;
+  }
+  
+  .discussion-profile h3 {
+    margin-bottom:0;
+    font-size: 1rem;
+  }
+  
+  .discussion-profile p {
+    font-weight: 700;
+    font-size: 1rem;
+  }
+}
 
 @media (max-width: 768px) {
   html {
