--- a/css/styles.css
+++ b/css/styles.css
@@ -11779,9 +11779,12 @@ section#contact form#contactForm :-ms-input-placeholder {
 }
 
 .footer {
+  height:16.5625rem;
   text-align: center;
-  font-size: 0.9rem;
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 1.875rem;
+  background-color: #07070b;
+  color:white;
+  font-family: 'NanumSquare', "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 .fa {
